gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail7178.d
version https://git-lfs.github.com/spec/v1
oid sha256:6750f30a04a8e284b326948c4406d5f6f3a9100191ccea7a824afcf255ae9d64
size 305
